--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         </div>
         <div id="tab-1" class="tab">
             <ul class="flex-wrap">
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/colsa.png);"><h4 class="gallery-text1">Кольца</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/colsao.png);"><h4 class="gallery-text1">серьги</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/diva.png);"><h4 class="gallery-text1">подвески</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/jinka.png);"><h4 class="gallery-text1">запонки</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/podveska.png);"><h4 class="gallery-text1">браслеты</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/sereg.png);"><h4 class="gallery-text1">часы</h4></div></a></li>
+                <li class="tabs_li"><a href=""><img class="gallery-category" src="/img/colsa.png"><h4 class="gallery-text1">Кольца</h4></div></a></li>
+                <li class="tabs_li"><a href=""><img class="gallery-category" src="/img/colsao.png"><h4 class="gallery-text1">серьги</h4></img></a></li>
+                <li class="tabs_li"><a href=""><img class="gallery-category" src="/img/diva.png"><h4 class="gallery-text1">подвески</h4></img></a></li>
+                <li class="tabs_li"><a href=""><img class="gallery-category" src="/img/jinka.png"><h4 class="gallery-text1">запонки</h4></img></a></li>
+                <li class="tabs_li"><a href=""><img class="gallery-category" src="/img/podveska.png"><h4 class="gallery-text1">браслеты</h4></img></a></li>
+                <li class="tabs_li"><a href=""><img class="gallery-category" src="/img/sereg.png"><h4 class="gallery-text1">часы</h4></img></a></li>
             </ul>
         </div>
         <div id="tab-2" class="tab active">
             <ul class="flex-wrap">
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/часыМ.jpg);"><h4 class="gallery-text1">Часы</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/Очки.jpg);"><h4 class="gallery-text1">Очки</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/кольцам.jpg);"><h4 class="gallery-text1">Кольца</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/колекциим.jpg);"><h4 class="gallery-text1">Коллекции</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/запанки.jpg);"><h4 class="gallery-text1">Запанки</h4></div></a></li>
-                <li class="tabs_li"><a href=""><div class="gallery-category" style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/браслетм.jpg);"><h4 class="gallery-text1">браслеты</h4></div></a></li>
+                <li class="tabs_li"><a href=""><div  style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/часыМ.jpg);"><h4 class="gallery-text1">Часы</h4></div></a></li>
+                <li class="tabs_li"><a href=""><div  style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/Очки.jpg);"><h4 class="gallery-text1">Очки</h4></div></a></li>
+                <li class="tabs_li"><a href=""><div  style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/кольцам.jpg);"><h4 class="gallery-text1">Кольца</h4></div></a></li>
+                <li class="tabs_li"><a href=""><div  style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/колекциим.jpg);"><h4 class="gallery-text1">Коллекции</h4></div></a></li>
+                <li class="tabs_li"><a href=""><div  style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/запанки.jpg);"><h4 class="gallery-text1">Запанки</h4></div></a></li>
+                <li class="tabs_li"><a href=""><div  style=" height: 100%; background-repeat: no-repeat; background-size: cover; background-image: url(/img/браслетм.jpg);"><h4 class="gallery-text1">браслеты</h4></div></a></li>
             </ul>
         </div>
         <div id="tab-3" class="tab">
