--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
             <h3>Полезные статьи</h3>
             <h2>Лучшие советы по подбору дорогих подарков</h2>
             <ul class="flex-wrap">
-                <li class="gallery-list"><a href=""><div class="gallery-category" style=" height: 370px; background-repeat: no-repeat; background-size: cover; background-image: url(../img/ruki.png);"><h4 class="gallery-text2">Как выбрать часы для своей будущей жены</h4></div></a></li>
-                <li class="gallery-list"><a href=""><div class="gallery-category" style=" height: 370px; background-repeat: no-repeat; background-size: cover; background-image: url(../img/corona.png);"><h4 class="gallery-text2">Запонки для мужа: 7 ключевых правил покупки аксессуара</h4></div></a></li>
-                <li class="gallery-list"><a href=""><div class="gallery-category" style=" height: 370px; background-repeat: no-repeat; background-size: cover; background-image: url(../img/telefon.png);"><h4  class="gallery-text2">Как выбрать обручальные кольца молодоженам</h4></div></a></li>
+                <li class="gallery-list"><a href=""><div class="gallery-category" style=" height: 370px; background-repeat: no-repeat; background-size: cover; background-image: url(../Украшения/img/ruki.png);"><h4 class="gallery-text2">Как выбрать часы для своей будущей жены</h4></div></a></li>
+                <li class="gallery-list"><a href=""><div class="gallery-category" style=" height: 370px; background-repeat: no-repeat; background-size: cover; background-image: url(../Украшения/img/corona.png);"><h4 class="gallery-text2">Запонки для мужа: 7 ключевых правил покупки аксессуара</h4></div></a></li>
+                <li class="gallery-list"><a href=""><div class="gallery-category" style=" height: 370px; background-repeat: no-repeat; background-size: cover; background-image: url(../Украшения/img/telefon.png);"><h4  class="gallery-text2">Как выбрать обручальные кольца молодоженам</h4></div></a></li>
             </ul>
             <button>читать наш блог</button>
         </div>
